impolemented most part of conversations
