# doc/api.yaml
@@ -106,7 +106,7 @@ components:
           $ref: "#/components/schemas/TimeStamp"
         content:
           $ref: "#/components/schemas/MessageContent"
-        link:
+        id:
           $ref: "#/components/schemas/MessageID"
       readOnly: true
 
@@ -152,6 +152,8 @@ components:
       properties:
         id:
           $ref: "#/components/schemas/MessageID"
+        conversation:
+          $ref: "#/components/schemas/ConversationID"
         sender:
           $ref: "#/components/schemas/UserID"
         timestamp:
@@ -190,13 +192,15 @@ components:
           type: boolean
           default: true
           readOnly: true
+        lastmessage:
+          $ref: "#/components/schemas/MessageID"
         participants:
           description: List of all members of a group chat. 
           type: array
           minItems: 3
-          maxItems: 1000
+          maxItems: 50
           items:
-            $ref: "#/components/schemas/UserID"
+            $ref: "#/components/schemas/User"
           nullable: true
         messages:
           description: The list of all messages sent of the chat.
@@ -376,7 +380,14 @@ paths:
                   $ref: "#/components/schemas/Image"
       responses:
         "200":
-          $ref: "#/components/responses/UserInfoUpdated"
+          description: User image modified successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  image:
+                    $ref: "#/components/schemas/Image"
         "400":
           $ref: "#/components/responses/BadRequestError"
         "401":
@@ -401,7 +412,11 @@ paths:
               $ref: "#/components/schemas/UserName"
       responses:
         "200":
-          $ref: "#/components/responses/UserInfoUpdated"
+          description: User name modified successfully
+          content:
+            text/plain:
+              schema:
+                $ref: "#/components/schemas/UserName"
         "400":
           $ref: "#/components/responses/BadRequestError"
         "401":
@@ -452,18 +467,27 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Conversation"
+              type: object
+              properties:
+                name:
+                  $ref: "#/components/schemas/ConversationName"
+                group:
+                  description: flag indicating whether the conversation is a group (true) or (false)
+                  type: boolean
+                  default: true
+                participants:
+                  type: array
+                  minItems: 3
+                  maxItems: 1000
+                  items:
+                    $ref: "#/components/schemas/UserName"
       responses:
         "201":
           description: New group succesfully created.
           content:
             application/json:
               schema:
-                type: array
-                minItems: 1
-                maxItems: 50
-                items:
-                  $ref: "#/components/schemas/Preview"
+                $ref: "#/components/schemas/Conversation"
         "400":
           $ref: "#/components/responses/BadRequestError"
         "401":
@@ -496,7 +520,7 @@ paths:
           $ref: "#/components/responses/NotFoundError"
         "500":
           $ref: "#/components/responses/ServerError"
-    put: 
+    post: 
       tags: [group]
       summary: add new members to group
       description: |-
